# global-interconnectedness-index

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
alembic/: env.py
alembic/versions/: 202df04d5b68_initial.py  20c3ebf06909_rename_avg_goldstein_and_cooperative_.py  a328569384f9_initial.py  c38ef2975cfe_add_trade_log_to_index_snapshots.py  cf40e76665ab_add_goldstein_and_cooperative_ratio_to_.py  d7c76914dbac_add_geopolitics_event_count_to_index_.py  db2884e0b3ea_initial.py
scripts/: run_backfill.py  seed_countries.py
src/gii/: __init__.py  config.py
src/gii/agents/: llm.py  narrative.py  quality.py  tools.py
src/gii/api/: app.py  dependencies.py  schemas.py
src/gii/api/routes/: agents.py  countries.py  index.py  pipelines.py
src/gii/computation/: composite.py  normalize.py  weights.py
src/gii/dashboard/: routes.py
src/gii/dashboard/static/: app.css  app.js
src/gii/dashboard/templates/: admin.html  base.html  country_detail.html  index.html  pair_detail.html  rankings.html
src/gii/dashboard/templates/partials/: pair_list.html  score_card.html
src/gii/data_sources/: airline_routes.py  comtrade.py  country_codes.py  gdelt.py  openflights.py  unwto.py
src/gii/models/: country.py  geopolitics.py  index.py  trade.py  travel.py
src/gii/pipelines/: activities.py  worker.py  workflows.py
src/gii/storage/: database.py  models.py  repository.py
tests/: conftest.py
